# hotelid-2021-first-place-solution

./: README.md  pyproject.toml  setup.py
configs/: v110_rs101e_augv5_s512_hotelidv2.yml  v112_regnety_augv5_s320_h50k.yml  v114_regnety_augv5_s512_hotelidv2.yml  v122_swin_augv5_s384_adamw_h50k.yml  v131_regnety_augv5_s512_hotelidv3.yml  v133_swin_augv5_s384_adamw_hotelidv3.yml  v40_rs101e_augv5_s320_h50k.yml  v43_rs101e_augv5_s512_h50k2.yml
peko/: __init__.py  augmentation.py  competition.py  path.py
peko/api/: build_RT_index.py  build_RTv2_index.py  build_RTv3_index.py  build_RTv4_index.py  build_index.py  evaluate.py  train.py
peko/api/internal/: train_apiv1.py
peko/cbir/: dba.py  functions.py  matcher.py  search.py
peko/dataset/: factory.py  hotelid.py  hotelid_rf_v2.py  hotelid_rf_v3.py  hotels50k.py  hotels50k_rev2.py  hotels50k_s1024.py
peko/subs/hotelid/: v38.py
peko/torch/: angular.py  angular_with_chain.py  cosine_softmax.py  metrics.py  swinarcface.py
peko/torch/backbones/: resnet.py  vit_pytorch.py
peko/utils/: colab.py  common.py  configs.py  feature_container.py  logger.py  saver.py  timer.py
scripts/: v80_rotation_model.py
