[tool.poetry]
name = "hotel-id-2021-fgvc8"
version = "0.1.0"
description = ""
authors = ["smly <smly@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
numpy = "^1.20.1"
scipy = "^1.6.1"
opencv-python = "^4.5.1"
click = "^7.1.2"
tqdm = "^4.59.0"
albumentations = "^0.5.2"
tensorboardX = "^2.1"
tensorboard = "^2.4.1"
timm = "^0.4.5"
jupyterlab = "^3.0.10"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.8.0%2Bcu111-cp39-cp39-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu111/torchvision-0.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/torchaudio-0.8.0-cp39-cp39-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
